Adding basic trade analysis capabilities

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -97,6 +97,10 @@ body,h1,h2,h3,h4,h5 {
   text-align: left;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .content-center {
   display: flex;
   justify-content: center;
