--- a/src/css/app.css
+++ b/src/css/app.css
@@ -106,8 +106,8 @@ body,h1,h2,h3,h4,h5 {
   justify-content: center;
 }
 
-.width-100 {
-  width: 100%;
+.width-100, .select2-search.select2-search--inline, .select2-search__field {
+  width: 100% !important;
 }
 
 .width-50 {
